--- a/src/app/components/employee-profile/employee-profile.component.html
+++ b/src/app/components/employee-profile/employee-profile.component.html
@@ -2,5 +2,5 @@
   <p><strong>Contacts: </strong> {{employee.name + " " + employee.surname}} - {{employee.email}}
     <i class="bi bi-x-lg" (click)="onDelete(employee)"></i>
   </p>
-  <p><strong>Working experience: </strong>{{employee.workingExperience}}</p>
+  <p><strong>Working experience: </strong>{{employee.workingExperience}} months</p>
 </div>
