Removed alert type NONE

--- a/src/app/components/employee-form/employee-form.component.html
+++ b/src/app/components/employee-form/employee-form.component.html
@@ -9,6 +9,7 @@
 </header>
 <form [hidden]="!isFormVisible" [formGroup]="employeeForm" (ngSubmit)="onSubmit()">
   <app-error-alert
+    [showAlert]="showAlert"
     [type]="alertType"
     [text]="alertText.get(alertType)"
   ></app-error-alert>
