--- a/src/app/components/error-alert/error-alert.component.html
+++ b/src/app/components/error-alert/error-alert.component.html
@@ -1,3 +1,3 @@
-<div *ngIf="type != AlertType.NONE" class="alert alert-{{AlertType[type].toString().toLowerCase()}}" role="alert">
+<div *ngIf="showAlert" class="alert alert-{{AlertType[type].toString().toLowerCase()}}" role="alert">
   <i class="bi bi-check-circle-fill"></i> {{text}}
 </div>
